<resources>
    <string name="app_name">Moim</string>

    <string name="login_title">팟팟팟팟</string>
    <string name="login_button">로그인</string>
    <string name="login_register">회원가입</string>

    <string name="string_id">ID</string>
    <string name="string_pw">PW</string>
    <string name="string_age">나이</string>
    <string name="string_place">지역</string>
    <string name="string_back">뒤로가기</string>
    <string name="string_time">시간</string>
    <string name="string_hour">시</string>
    <string name="string_minute">분</string>
    <string name="string_send">전송</string>
    <string name="string_simple_date">%1$d월 %2$d일</string>
    <string name="string_refresh">새로고침</string>
    <string name="string_join">참가하기</string>
    <string name="string_enter">들어가기</string>
    <string name="string_user_list">참가자 보기</string>
    <string name="string_user_list_title">참가자 목록</string>
    <string name="string_user_head">%1$s(방장)</string>

    <string name="check_duplicate">중복확인</string>
    <string name="main_welcome">%1$s님 안녕하세요!</string>
    <string name="register_username">닉네임</string>
    <string name="create_party">팟 만들기</string>
    <string name="taxi_option1">출발지: %1$s</string>
    <string name="taxi_option2">도착지: %1$s</string>
    <string name="meal_option1">음식 종류: %1$s</string>
    <string name="meal_option2">먹는 위치: %1$s</string>

    <string name="party_datetime">%1$s %2$s</string>
    <string name="party_place">%1$s</string>
    <string name="party_count">%1$d / %2$d</string>
    <string name="party_head">방장: %1$s</string>

    <string name="modify_party">팟 수정하기</string>
    <string name="modify_cancel">수정 취소</string>
    <string name="modify_confirm">수정 완료</string>

    <string name="chat_join">%1$s 님이 입장했습니다.</string>
    <string name="chat_leave">%1$s 님이 나갔습니다.</string>

    <string name="hint_party_detail">팟의 자세한 설명을 적어주세요.</string>
    <string name="hint_party_name">팟 이름</string>
    <string name="hint_datetime">날짜 선택</string>
    <string name="create_party_name_hint">팟을 잘 표현할 수 있는 제목을 적어주세요.</string>
    <string name="create_party_maximum_count">최대 인원 수:</string>

    <string name="menu_info">파티 정보</string>
    <string name="menu_leave">파티 탈퇴하기</string>

    <string name="placeholder">PlaceHolder</string>
    <string name="hi">HI</string>

    <string-array name="party_type">
        <item>택시팟</item>
        <item>밥약팟</item>
        <item>야식팟</item>
        <item>공부/프로젝트팟</item>
        <item>나만의팟</item>
    </string-array>

    <string-array name="place1">
        <item>대전광역시</item>
    </string-array>

    <string-array name="place3">
        <item>유성구</item>
        <item>대덕구</item>
        <item>서구</item>
        <item>중구</item>
        <item>동구</item>
    </string-array>

    <string-array name="time_type">
        <item>오전</item>
        <item>오후</item>
    </string-array>

    <string-array name="meal_outside">
        <item>배달 시키기</item>
        <item>나가서 먹기</item>
    </string-array>

    <string-array name="meal_type">
        <item>한식</item>
        <item>중식</item>
        <item>일식</item>
        <item>양식</item>
        <item>기타</item>
    </string-array>

</resources>